# sqlite3-esp32-littlefs-sdcard-sdspi

./: CMakeLists.txt  config_ext.h  esp32.c  lfs_port.h  readme.md  sd_card_example_main.cpp  sensor_data_logger.cpp
